--- a/Assets/less/bootstrap/utilities.less
+++ b/Assets/less/bootstrap/utilities.less
@@ -172,6 +172,23 @@ select, option {
   height: 50%;
 }
 
+
+
+.w-h-350px {
+  width: 350px;
+  height: 350px;
+}
+
+
+.w-h-200px {
+  width: 200px;
+  height: 200px;
+}
+
+.w-h-100px {
+  width: 100px;
+  height: 100px;
+}
 //colors
 
 
@@ -259,7 +276,6 @@ select, option {
 }
 
 
-
 // opacity
 
 .opacity-20 {
@@ -326,6 +342,11 @@ ul.dotted{
 
 .display-none {
   display: none;
+}
+
+.block-center {
+  margin-left: auto;
+  margin-right: auto;
 }
 .ov-h, .ovh {
   overflow: hidden;
