--- a/Assets/less/media-query.less
+++ b/Assets/less/media-query.less
@@ -40,13 +40,13 @@
 // Desktops
 @media (min-width: @screen-desktop) {
 
-/*	.property-sidebar {
+	/*.property-sidebar {
 	  position: absolute;
 	  height: 100%;
 	  right: 0;
 	  top: 0;
-	}*/
-
+	}
+*/
 }
 
 
