--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -23,11 +23,12 @@ body {
   z-index: 8;
 }
 .modal {
-  z-index: 9;
+  z-index: 9999;
 }
 
 img, iframe {
   max-width: 100%;
+  height: auto;
 }
 
 h1, h2, h3, h4, h5, h6, .blue {
