on going changes

--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -624,9 +624,10 @@ input[type="range"]::-webkit-slider-thumb {
 height: 400px;
 }
 .carousel-indicators {
-  width: 90%;
-  left: auto;
-  right: 10%;
+  width: auto;
+  left: 0;
+  right: 0;
+  position: relative;
 }
 .carousel-indicators li {
   display: inline;
