--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -4883,9 +4883,10 @@ input[type="range"]::-webkit-slider-thumb {
   height: 400px;
 }
 .carousel-indicators {
-  width: 90%;
-  left: auto;
-  right: 10%;
+  width: auto !important;
+  left: 0 !important;
+  right: 0 !important ;
+  position: relative !important;
 }
 .carousel-indicators li {
   display: inline;
@@ -4897,6 +4898,10 @@ input[type="range"]::-webkit-slider-thumb {
   border: 0;
   border-radius: 3px;
   cursor: pointer;
+}
+.carousel-control.left,
+.carousel-control.right {
+  padding-top: 30%;
 }
 .carousel-indicators .active {
   width: 100px;
