--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -624,10 +624,10 @@ input[type="range"]::-webkit-slider-thumb {
 height: 400px;
 }
 .carousel-indicators {
-  width: auto;
-  left: 0;
-  right: 0;
-  position: relative;
+  width: auto !important;
+  left: 0 !important;
+  right: 0 !important ;
+  position: relative !important;
 }
 .carousel-indicators li {
   display: inline;
@@ -639,6 +639,9 @@ height: 400px;
   border: 0;
   border-radius: 3px;
   cursor: pointer;
+}
+.carousel-control.left , .carousel-control.right  {
+  padding-top: 30%;
 }
 .carousel-indicators .active  {
   width: 100px;
