--- a/Assets/less/bootstrap/utilities.less
+++ b/Assets/less/bootstrap/utilities.less
@@ -39,6 +39,13 @@
   }
 }
 
+.gray-light {
+  color: #f5f5f5;
+  &:hover{
+    color:white;
+  }
+}
+
 .color-sec {
   color:@brand-warning;
   &:hover{
