--- a/Assets/less/slider-range.less
+++ b/Assets/less/slider-range.less
@@ -11,8 +11,8 @@
   vertical-align: middle;
   position: relative;
 }
-.slider.slider-horizontal {
-  width: 210px;
+.slider.slider-horizontal, .slider.slider-horizontal[style] {
+  width: 90% !important;
   height: 20px;
 }
 .slider.slider-horizontal .slider-track {
