--- a/Assets/less/style.less
+++ b/Assets/less/style.less
@@ -161,7 +161,6 @@ label{
 	background-size: cover;
 }
 
-@import "slider.less";
 
 /* RESPONSIVE CSS
 -------------------------------------------------- */
@@ -623,7 +622,7 @@ input[type="range"]::-webkit-slider-thumb {
 .carousel .item {
 height: 400px;
 }
-.carousel-indicators {
+/*.carousel-indicators {
   width: auto !important;
   left: 0 !important;
   right: 0 !important ;
@@ -649,6 +648,42 @@ height: 400px;
   background-color: none;
   background-color: transparent;
   border: 0;
+}*/
+.carousel-inner {
+  box-shadow: 0 1px 2px rgba(0,0,0,.25);
+}
+.carousel-caption  {
+  padding-bottom: 40px;
+
+  p {
+    color: rgba(255,255,255,0.6);
+  }
+}
+
+.carousel-caption .title a {
+  color:white;
+  text-shadow:none;
+  margin-bottom: 20px;
+
+  .transition;
+
+  &:hover  {
+    text-decoration: none;
+  }
+}
+
+.btn-white-border {
+  padding: 10px 20px;
+  border: 1px solid white;
+  color:white;
+  text-decoration: none;
+  border-radius: 5px;
+  .transition;
+  &:hover {
+    color: #fff;
+    text-decoration: none;
+    background-color: rgba(255,255,255,0.2);
+  }
 }
 
 .badge-active {
