--- a/Assets/less/bootstrap/variables.less
+++ b/Assets/less/bootstrap/variables.less
@@ -21,7 +21,7 @@
 // -------------------------
 
 
-@blue :#20396c;
+@blue :#2D4F95;
 
 @brand-primary:         #202020; //#20396c;
 @brand-success:         #5cb85c;
@@ -101,31 +101,31 @@
 // Buttons
 // -------------------------
 
-@btn-default-color:              #fff;
-@btn-default-bg:                 #828282;
+@btn-default-color:              @brand-primary;
+@btn-default-bg:                 #fff;
 @btn-default-border:             @btn-default-bg;
 
-@btn-primary-color:              @btn-default-color;
+@btn-primary-color:              #fff;
 @btn-primary-bg:                 @brand-primary;
 @btn-primary-border:             @btn-primary-bg;
 
-@btn-success-color:              @btn-default-color;
+@btn-success-color:              #fff;
 @btn-success-bg:                 @brand-success;
 @btn-success-border:             @btn-success-bg;
 
-@btn-warning-color:              @btn-default-color;
+@btn-warning-color:              #fff;
 @btn-warning-bg:                 @brand-warning;
 @btn-warning-border:             @btn-warning-bg;
 
-@btn-danger-color:               @btn-default-color;
+@btn-danger-color:               #fff;
 @btn-danger-bg:                  @brand-danger;
 @btn-danger-border:              @btn-danger-bg;
 
-@btn-info-color:                 @btn-default-color;
+@btn-info-color:                 #fff;
 @btn-info-bg:                    @brand-info;
 @btn-info-border:                @btn-info-bg;
 
-@btn-hover-color:                @btn-default-color;
+@btn-hover-color:                #fff;
 
 
 // Forms
