--- a/Assets/less/bootstrap/utilities.less
+++ b/Assets/less/bootstrap/utilities.less
@@ -2,8 +2,22 @@
 // Utility classes
 // --------------------------------------------------
 
+
+//colors
+
+
+.gray {
+  color: @gray;
+}
+.gray-light  {
+  color: @gray-light;
+}
 .border-top-2px-blue {
   border-top: 2px solid @blue;
+}
+
+.border-top-2px-white {
+  border-top: 2px solid white;
 }
 
 .border-top-2px-red {
@@ -111,6 +125,12 @@ select, option {
 
 }
 
+.padding-r-l-0 {
+  padding-left: 0;
+  padding-right: 0;
+}
+
+
 .padding-r-l-2em {
   padding-left: 2em;
   padding-right: 2em;
@@ -151,6 +171,23 @@ select, option {
   padding-bottom: 4em;
 }
 
+
+.padding-top-1em {
+  padding-top: 1em;
+}
+
+.padding-top-2em {
+  padding-top: 2em;
+}
+
+.padding-top-3em {
+  padding-top: 3em;
+}
+
+.padding-top-4em {
+  padding-top: 4em;
+}
+
 .padding-bottom-2em {
   padding-bottom: 2em;
 }
@@ -165,6 +202,30 @@ select, option {
 
 //margins
 
+
+.marign-05em {
+  marign-top: .5em;
+  marign-bottom: .5em;
+}
+.marign-1em {
+  marign-top: 1em;
+  marign-bottom: 1em;
+}
+
+.marign-2em {
+  marign-top: 2em;
+  marign-bottom: 2em;
+}
+
+.marign-3em {
+  marign-top: 3em;
+  marign-bottom: 3em;
+}
+
+.marign-4em {
+  marign-top: 4em;
+  marign-bottom: 4em;
+}
 .margin-top-1em {
   margin-top: 1em;
 }
