--- a/Assets/less/bootstrap/variables.less
+++ b/Assets/less/bootstrap/variables.less
@@ -101,8 +101,8 @@
 // Buttons
 // -------------------------
 
-@btn-default-color:              @brand-primary;
-@btn-default-bg:                 #fff;
+@btn-default-color:              #fff;
+@btn-default-bg:                 @blue;
 @btn-default-border:             @btn-default-bg;
 
 @btn-primary-color:              #fff;
