--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -5983,3 +5983,15 @@ td.visible-print {
     display: none !important;
   }
 }
+
+#googleMap
+{
+	width:100%;
+	height:400px;
+	border:1px dotted #999999;
+}
+
+.list-area > span
+{
+	cursor:pointer;
+}
